--- a/files/index.html
+++ b/files/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>DevOps Project</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f2f2f2;
+      margin-top: 100px;
+    }
+    h1 {
+      color: #4CAF50;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚀 Welcome to My DevOps Project!</h1>
+  <p>Deployed automatically using Jenkins + Ansible + Apache2</p>
+</body>
+</html>
 
